Fix for images not showing

--- a/Blog.Frontend/Blog.Frontend.Web/Content/modules/posts/postsMain.css
+++ b/Blog.Frontend/Blog.Frontend.Web/Content/modules/posts/postsMain.css
@@ -1,66 +1,4 @@
-﻿div.main-container,
-div.main-pusher,
-div.main-content {
-    height: 100%;
-}
-
-div.main-container {
-    position: relative;
-    overflow: hidden;
-}
-
-    div.main-container div.main-pusher {
-        position: relative;
-        left: 0;
-        z-index: 99;
-        height: 100%;
-        -webkit-transition: -webkit-transform 0.5s;
-        -moz-transition: transform 0.5s;
-        -o-transition: transform 0.5s;
-        -ms-transition: transform 0.5s;
-        transition: transform 0.5s;
-    }
-
-        div.main-container div.main-pusher::after {
-            position: absolute;
-            top: 0;
-            right: 0;
-            width: 0;
-            height: 0;
-            background: #000000;
-            background: rgba(0,0,0,0.2);
-            content: '';
-            -ms-opacity: 0;
-            opacity: 0;
-            -webkit-transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
-            -moz-transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
-            -o-transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
-            -ms-transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
-            transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
-        }
-
-        div.main-container div.main-pusher div.main-content {
-            overflow-y: scroll;
-        }
-
-            div.main-container div.main-pusher div.main-content,
-            div.main-container div.main-pusher div.main-content div.main-content-inner {
-                position: relative;
-            }
-
-div.navigation-menu-open div.main-pusher::after {
-    width: 100%;
-    height: 100%;
-    -ms-opacity: 1;
-    opacity: 1;
-    -webkit-transition: opacity 0.5s;
-    -moz-transition: opacity 0.5s;
-    -o-transition: opacity 0.5s;
-    -ms-transition: opacity 0.5s;
-    transition: opacity 0.5s;
-}
-
-#posts-main {
+﻿#posts-main {
     margin: 60px 0;
     width: 100%;
 }
@@ -85,6 +23,7 @@ div.navigation-menu-open div.main-pusher::after {
         position: relative;
         text-decoration: none;
         vertical-align: top;
+        font-size: 1em;
     }
 
         #posts-main > div.post-item.large {
